corrected path to image

--- a/exploder/index.html
+++ b/exploder/index.html
@@ -15,7 +15,7 @@
 </div>
 <script>
     document.app_namespace = exploder_app;
-    exploder_app.start(document, window, 'gameCanvas', 'res/jpg/flash.jpg');
+    exploder_app.start(document, window, 'gameCanvas', '/static/jpg/flash.jpg');
 </script>
   
 </body>
